# IGR201a-OpenGL-linux-lab1

./: CMakeLists.txt  fragmentShader.glsl  main.cpp  mesh.h  vertexShader.glsl
